footerz iconz etc

--- a/account-login-and-security.html
+++ b/account-login-and-security.html
@@ -325,7 +325,7 @@
 
     <!--************************************ DESKTOP FOOTER END************************************-->
     <!--************************************ MOBILE FOOTER START ************************************-->
-    <div class="footer-container">
+    <div class="footer-container fix-bottom-absolute">
         <div class="footer-content">
             <div class="my-games" id="myGamesFooter">
                 <img src="icons/mygames-bottom.png" alt="my games">
