--- a/account.html
+++ b/account.html
@@ -241,7 +241,7 @@
 
 
     <!--************************************ DESKTOP FOOTER START ************************************-->
-    <div class="desktop-footer">
+    <div class="desktop-footer fix-bottom-absolute">
         <div class="desktop-footer-content">
             <div class="upper">
                 <div class="left">
@@ -292,7 +292,7 @@
 
     <!--************************************ DESKTOP FOOTER END************************************-->
     <!--************************************ MOBILE FOOTER START ************************************-->
-    <div class="footer-container fix-bottom">
+    <div class="footer-container fix-bottom-absolute">
         <div class="footer-content">
             <div class="my-games" id="myGamesFooter">
                 <img src="icons/mygames-bottom.png" alt="my games">
