--- a/games-history.html
+++ b/games-history.html
@@ -281,7 +281,7 @@
     <!--************************************ HISTORY GAMES SECTION END ************************************-->
 
     <!--************************************ DESKTOP FOOTER START ************************************-->
-    <div class="desktop-footer">
+    <div class="desktop-footer footer-margin">
         <div class="desktop-footer-content">
             <div class="upper">
                 <div class="left">
