--- a/slot-details-confirmed.html
+++ b/slot-details-confirmed.html
@@ -385,7 +385,7 @@
 
 
                 <div class="player-box-invite">
-                    <img src="players/player1.png" alt="player">
+                    <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
                         <h5>Smoke Mardeljano</h5>
                         <p>Belgrade, Serbia</p>
@@ -413,7 +413,7 @@
                 </div>
 
                 <div class="player-box-invite">
-                    <img src="players/player1.png" alt="player">
+                    <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
                         <h5>Smoke Mardeljano</h5>
                         <p>Belgrade, Serbia</p>
@@ -441,7 +441,7 @@
                 </div>
 
                 <div class="player-box-invite">
-                    <img src="players/player1.png" alt="player">
+                    <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
                         <h5>Smoke Mardeljano</h5>
                         <p>Belgrade, Serbia</p>
@@ -469,7 +469,7 @@
                 </div>
 
                 <div class="player-box-invite">
-                    <img src="players/player1.png" alt="player">
+                    <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
                         <h5>Smoke Mardeljano</h5>
                         <p>Belgrade, Serbia</p>
@@ -497,7 +497,7 @@
                 </div>
 
                 <div class="player-box-invite">
-                    <img src="players/player1.png" alt="player">
+                    <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
                         <h5>Smoke Mardeljano</h5>
                         <p>Belgrade, Serbia</p>
@@ -525,7 +525,7 @@
                 </div>
 
                 <div class="player-box-invite">
-                    <img src="players/player1.png" alt="player">
+                    <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
                         <h5>Smoke Mardeljano</h5>
                         <p>Belgrade, Serbia</p>
@@ -567,7 +567,7 @@
             <p>https://qderae/213123123</p>
         </div>
         <p class="span-green">Copy link</p>
-        <button class="green-button">Invite players</button>
+        <button class="green-button" onclick="location.href='find-players.html'">Invite players</button>
     </div>
     
     <div class="slot-details-settings">
