--- a/slot-details-pending.html
+++ b/slot-details-pending.html
@@ -288,7 +288,7 @@
 
 
                 <div class="player-box-invite">
-                    <img src="players/player1.png" alt="player">
+                    <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
                         <h5>Smoke Mardeljano</h5>
                         <p>Belgrade, Serbia</p>
@@ -316,7 +316,7 @@
                 </div>
 
                 <div class="player-box-invite">
-                    <img src="players/player1.png" alt="player">
+                    <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
                         <h5>Smoke Mardeljano</h5>
                         <p>Belgrade, Serbia</p>
@@ -344,7 +344,7 @@
                 </div>
 
                 <div class="player-box-invite">
-                    <img src="players/player1.png" alt="player">
+                    <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
                         <h5>Smoke Mardeljano</h5>
                         <p>Belgrade, Serbia</p>
@@ -372,7 +372,7 @@
                 </div>
 
                 <div class="player-box-invite">
-                    <img src="players/player1.png" alt="player">
+                    <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
                         <h5>Smoke Mardeljano</h5>
                         <p>Belgrade, Serbia</p>
@@ -400,7 +400,7 @@
                 </div>
 
                 <div class="player-box-invite">
-                    <img src="players/player1.png" alt="player">
+                    <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
                         <h5>Smoke Mardeljano</h5>
                         <p>Belgrade, Serbia</p>
@@ -428,7 +428,7 @@
                 </div>
 
                 <div class="player-box-invite">
-                    <img src="players/player1.png" alt="player">
+                    <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
                         <h5>Smoke Mardeljano</h5>
                         <p>Belgrade, Serbia</p>
