--- a/upcoming-games.html
+++ b/upcoming-games.html
@@ -315,7 +315,7 @@
 
     
 <!--************************************ DESKTOP FOOTER START ************************************-->
-<div class="desktop-footer">
+<div class="desktop-footer footer-margin">
     <div class="desktop-footer-content">
         <div class="upper">
             <div class="left">
