--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
           <div class="carousel-inner">
             <div class="carousel-item active">
                 <img class="d-block carouselImage mobileCarouselImage" src="carousel/carouselmobile2.png">
-                <img class="d-block carouselImage tabletCarouselImage" src="carousel/carouseltablet2.png">
+
                 <div class="carousel-caption d-block d-md-block carousel-content">
                   <h3>Games</h3>
                   <p>Looking for already scheduled games that need additional players?</p>
@@ -317,7 +317,7 @@
               </div>
             <div class="carousel-item">
                 <img class="d-block carouselImage mobileCarouselImage" src="carousel/carouselmobile3.png">
-                <img class="d-block carouselImage tabletCarouselImage" src="carousel/carouseltablet3.png">
+
               <div class="carousel-caption d-block d-md-block carousel-content">
                 <h3>Players</h3>
                 <p>Looking to add players to your scheduled game?</p>
@@ -326,7 +326,7 @@
             </div>
             <div class="carousel-item">
                 <img class="d-block carouselImage mobileCarouselImage" src="carousel/carouselmobile1.png">
-                <img class="d-block carouselImage tabletCarouselImage" src="carousel/carouseltablet1.png">
+
                 <div class="carousel-caption d-block d-md-block carousel-content">
                     <h3>Courts</h3>
                     <p>Looking to book court session?</p>
@@ -340,6 +340,55 @@
             <span class="sr-only">Previous</span>
           </a>
           <a class="carousel-control-next" href="#carouselBannerMobile" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+
+    </section>
+
+    <section class="carousel-tablet">
+        <div id="carouselBannerTablet" class="carousel slide carousel-section" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselBannerTablet" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselBannerTablet" data-slide-to="1"></li>
+            <li data-target="#carouselBannerTablet" data-slide-to="2"></li>
+        </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+
+                <img class="d-block carouselImage tabletCarouselImage" src="carousel/carouseltablet2.png">
+                <div class="carousel-caption d-block d-md-block carousel-content">
+                  <h3>Games</h3>
+                  <p>Looking for already scheduled games that need additional players?</p>
+                <button onclick="window.location.href='find-game.html'">See open spots</button>
+                </div>
+              </div>
+            <div class="carousel-item">
+
+                <img class="d-block carouselImage tabletCarouselImage" src="carousel/carouseltablet3.png">
+              <div class="carousel-caption d-block d-md-block carousel-content">
+                <h3>Players</h3>
+                <p>Looking to add players to your scheduled game?</p>
+                <button onclick="window.location.href='find-players.html'">Find available players</button>
+              </div>
+            </div>
+            <div class="carousel-item">
+
+                <img class="d-block carouselImage tabletCarouselImage" src="carousel/carouseltablet1.png">
+                <div class="carousel-caption d-block d-md-block carousel-content">
+                    <h3>Courts</h3>
+                    <p>Looking to book court session?</p>
+                    <button onclick="window.location.href='find-court.html'">Browse sessions</button>
+                </div>
+              </div>
+              
+          </div>
+          <a class="carousel-control-prev" href="#carouselBannerTablet" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselBannerTablet" role="button" data-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
           </a>
@@ -501,7 +550,7 @@
                     </div>
                 </div>
 
-                <div class="court-block court-block-available" type="paid" inOut="indoor" onclick="location.href='selected-indoor-court.html'">
+                <div class="court-block court-block-available" type="paid" inOut="indoor" onclick="location.href='create-game-2.html'">
                     <div class="court-block-content">
                         <img src="court_images/court4.png" alt="court" class="court-image">
                         <div class="court-info">
@@ -667,7 +716,7 @@
                     </div>
                 </div>
 
-                <div class="court-block court-block-available" type="paid" inOut="indoor" onclick="location.href='selected-indoor-court.html'">
+                <div class="court-block court-block-available" type="paid" inOut="indoor" onclick="location.href='create-game-2.html'">
                     <div class="court-block-content">
                         <img src="court_images/court4.png" alt="court" class="court-image">
                         <div class="court-info">
@@ -700,7 +749,7 @@
                 </div>
 
 
-                <div class="court-block court-block-available" type="paid" inOut="indoor" onclick="location.href='selected-indoor-court.html'">
+                <div class="court-block court-block-available" type="paid" inOut="indoor" onclick="location.href='create-game-2.html'">
                     <div class="court-block-content">
                         <img src="court_images/court4.png" alt="court" class="court-image">
                         <div class="court-info">
@@ -961,7 +1010,7 @@
                 </div>
 
 
-                <div class="court-block-featured court-block-available" onclick="location.href='selected-outdoor-court.html'">
+                <div class="court-block-featured court-block-available" onclick="location.href='create-game-2.html'">
                     <div class="court-block-content">
                         <img src="court_images/court4.png" alt="court" class="court-image">
                         <div class="court-info">
@@ -1061,7 +1110,7 @@
                     </div>
                 </div>
 
-                <div class="court-block-featured court-block-available" onclick="location.href='selected-outdoor-court.html'">
+                <div class="court-block-featured court-block-available" onclick="location.href='create-game-2.html'">
                     <div class="court-block-content">
                         <img src="court_images/court4.png" alt="court" class="court-image">
                         <div class="court-info">
