--- a/notifications.html
+++ b/notifications.html
@@ -253,7 +253,7 @@
             <div class="notifications">
 
                 <div class="notification-box invitation-free-outdoor">
-                    <img src="players/player4.png" alt="player" class="notification-avatar">
+                    <img src="players/player4.png" alt="player" class="notification-avatar" onclick="location.href='selected-profile.html'">
                     <div class="notification-info">
                         <p>Francois Delacroix invited you to</p>
                         <h5 class="court-name">Court address Outdoor 635, Paris</h5>
@@ -275,7 +275,7 @@
                 </div>
 
                 <div class="notification-box invitation-indoor-paid">
-                    <img src="images/avatar.png" alt="player" class="notification-avatar">
+                    <img src="images/avatar.png" alt="player" class="notification-avatar" onclick="location.href='selected-profile.html'">
                     <div class="notification-info">
                         <p>Francois Delacroix invited you to</p>
                         <h5 class="court-name">Super Sport Court Basketball 1</h5>
@@ -303,7 +303,7 @@
                 </div>
 
                 <div class="notification-box accepted-invitation">
-                    <img src="players/player2.png" alt="player" class="notification-avatar">
+                    <img src="players/player2.png" alt="player" class="notification-avatar" onclick="location.href='selected-profile.html'">
                     <div class="notification-info">
                         <p>Francois Delacroix accepted invitaion to</p>
                         <h5 class="court-name">Super Sport Court Basketball 1</h5>
@@ -325,7 +325,7 @@
 
 
                 <div class="notification-box someone-booked-slot">
-                    <img src="images/avatar.png" alt="avatar" class="notification-avatar">
+                    <img src="images/avatar.png" alt="avatar" class="notification-avatar" onclick="location.href='selected-profile.html'">
                     <div class="notification-info">
                         <p>Maximillian Rodriguez <span class="span-green">BOOKED SLOT</span></p>
                         <h5 class="court-name">Super Sport Court Basketball 1</h5>
@@ -350,7 +350,7 @@
                 </div>
 
                 <div class="notification-box asked-to-join-groups changed-details">
-                    <img src="images/avatar.png" alt="group" class="notification-avatar">
+                    <img src="images/avatar.png" alt="group" class="notification-avatar" onclick="location.href='selected-profile.html'">
                     <div class="notification-info">
                         <p>Maximillian Rodriguez edited details</p>
                         <h5 class="court-name">Super Sport Court Basketball 1</h5>
@@ -380,7 +380,7 @@
                 </div>
 
                 <div class="notification-box asked-to-join-groups rescheduled-details">
-                    <img src="images/avatar.png" alt="group" class="notification-avatar">
+                    <img src="images/avatar.png" alt="group" class="notification-avatar" onclick="location.href='selected-profile.html'">
                     <div class="notification-info">
                         <p>Maximillian Rodriguez <span class="span-black">RESCHEDULED GAME DETAILS</span> </p>
                         <h5 class="court-name">Super Sport Court Basketball 1</h5>
@@ -409,7 +409,7 @@
                 </div>
 
                 <div class="notification-box paid-for-slot">
-                    <img src="images/avatar.png" alt="avatar" class="notification-avatar">
+                    <img src="images/avatar.png" alt="avatar" class="notification-avatar" onclick="location.href='selected-profile.html'">
                     <div class="notification-info">
                         <p>Maximillian Rodriguez <span class="span-green">PAID FOR THE SLOT!</span></p>
                         <h5 class="court-name">Super Sport Court Basketball 1</h5>
@@ -431,7 +431,7 @@
                 </div>
 
                 <div class="notification-box canceled-slot">
-                    <img src="images/avatar.png" alt="avatar" class="notification-avatar">
+                    <img src="images/avatar.png" alt="avatar" class="notification-avatar" onclick="location.href='selected-profile.html'">
                     <div class="notification-info">
                         <p>Maximillian Rodriguez <span class="span-orange">CANCELED SLOT!</span></p>
                         <h5 class="court-name">Super Sport Court Basketball 1</h5>
@@ -452,7 +452,7 @@
                 </div>
 
                 <div class="notification-box canceled-slot-admin">
-                    <img src="images/avatar.png" alt="avatar" class="notification-avatar">
+                    <img src="images/avatar.png" alt="avatar" class="notification-avatar" onclick="location.href='selected-profile.html'">
                     <div class="notification-info">
                         <p>Maximillian Rodriguez <span class="span-orange">CANCELED SLOT!</span></p>
                         <h5 class="court-name">Super Sport Court Basketball 1</h5>
@@ -485,7 +485,7 @@
                 </div>
 
                 <div class="notification-box card-charged">
-                    <img src="icons/dollar-grey.png" alt="dollar" class="notification-avatar">
+                    <img src="icons/dollar-grey.png" alt="dollar" class="notification-avatar"> 
                     <div class="notification-info">
                         <p>Your card has been charged with</p>
                         <h5 class="amount">6.5&#36;</h5>
@@ -573,7 +573,7 @@
                 </div>
 
                 <div class="notification-box invitation-free-outdoor">
-                    <img src="players/player4.png" alt="player" class="notification-avatar">
+                    <img src="players/player4.png" alt="player" class="notification-avatar" onclick="location.href='selected-profile.html'">
                     <div class="notification-info">
                         <p>Francois Delacroix invited you to</p>
                         <h5 class="court-name">Court address Outdoor 635, Paris</h5>
