--- a/slot-details-invited-player.html
+++ b/slot-details-invited-player.html
@@ -274,7 +274,7 @@
 
 
                 <div class="player-box-invite">
-                    <img src="players/player1.png" alt="player">
+                    <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
                         <h5>Smoke Mardeljano</h5>
                         <p>Belgrade, Serbia</p>
@@ -295,7 +295,7 @@
                 </div>
 
                 <div class="player-box-invite">
-                    <img src="players/player1.png" alt="player">
+                    <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
                         <h5>Smoke Mardeljano</h5>
                         <p>Belgrade, Serbia</p>
@@ -316,7 +316,7 @@
                 </div>
 
                 <div class="player-box-invite">
-                    <img src="players/player1.png" alt="player">
+                    <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
                         <h5>Smoke Mardeljano</h5>
                         <p>Belgrade, Serbia</p>
@@ -337,7 +337,7 @@
                 </div>
 
                 <div class="player-box-invite">
-                    <img src="players/player1.png" alt="player">
+                    <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
                         <h5>Smoke Mardeljano</h5>
                         <p>Belgrade, Serbia</p>
@@ -358,7 +358,7 @@
                 </div>
 
                 <div class="player-box-invite">
-                    <img src="players/player1.png" alt="player">
+                    <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
                         <h5>Smoke Mardeljano</h5>
                         <p>Belgrade, Serbia</p>
@@ -379,7 +379,7 @@
                 </div>
 
                 <div class="player-box-invite">
-                    <img src="players/player1.png" alt="player">
+                    <img src="players/player1.png" alt="player" onclick="location.href='messages.html'">
                     <div class="player-info-invite">
                         <h5>Smoke Mardeljano</h5>
                         <p>Belgrade, Serbia</p>
