--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                     </div>
                 </div>
 
-                <div class="court-block court-block-promo" type="paid" inOut="indoor" onclick="location.href='selected-indoor-court.html'">
+                <div class="court-block court-block-promo" type="paid" inOut="indoor" onclick="location.href='create-game-2.html'">
                     <div class="court-block-content">
                         <img src="court_images/court2.png" alt="court" class="court-image">
                         <div class="court-info">
@@ -605,7 +605,7 @@
                     </div>
                 </div>
 
-                <div class="court-block court-block-promo" type="paid" inOut="indoor" onclick="location.href='selected-indoor-court.html'">
+                <div class="court-block court-block-promo" type="paid" inOut="indoor" onclick="location.href='create-game-2.html'">
                     <div class="court-block-content">
                         <img src="court_images/court2.png" alt="court" class="court-image">
                         <div class="court-info">
@@ -804,7 +804,7 @@
                     </div>
                 </div>
 
-                <div class="court-block court-block-promo" type="paid" inOut="indoor" onclick="location.href='selected-indoor-court.html'">
+                <div class="court-block court-block-promo" type="paid" inOut="indoor" onclick="location.href='create-game-2.html'">
                     <div class="court-block-content">
                         <img src="court_images/court2.png" alt="court" class="court-image">
                         <div class="court-info">
@@ -882,7 +882,7 @@
                     </div>
                 </div>
 
-                <div class="court-block court-block-promo" type="paid" inOut="indoor" onclick="location.href='selected-indoor-court.html'">
+                <div class="court-block court-block-promo" type="paid" inOut="indoor" onclick="location.href='create-game-2.html'">
                     <div class="court-block-content">
                         <img src="court_images/court2.png" alt="court" class="court-image">
                         <div class="court-info">
@@ -976,7 +976,7 @@
                 </div>
             </div>
 
-                <div class="court-block-featured court-block-promo" onclick="location.href='selected-outdoor-court.html'">
+                <div class="court-block-featured court-block-promo" onclick="location.href='create-game-2.html'">
                     <div class="court-block-content">
                         <img src="court_images/court2.png" alt="court" class="court-image">
                         <div class="court-info">
@@ -1077,7 +1077,7 @@
                     </div>
                 </div>
 
-                <div class="court-block-featured court-block-promo" onclick="location.href='selected-outdoor-court.html'">
+                <div class="court-block-featured court-block-promo" onclick="location.href='create-game-2.html'">
                     <div class="court-block-content">
                         <img src="court_images/court2.png" alt="court" class="court-image">
                         <div class="court-info">
