reservation style edit

--- a/reservations.html
+++ b/reservations.html
@@ -329,7 +329,7 @@
                     <div class="more">
                         <img src="icons/dots.png" alt="more" class="dots">
                         <ul class="more-list">
-                            <li>Message</li>
+                            <li onclick="location.href='messages.html'">Message</li>
                             <li>Change</li>
                             <li class="ownerCancel">Cancel</li>
                         </ul>
@@ -392,7 +392,7 @@
                     <div class="more">
                         <img src="icons/dots.png" alt="more" class="dots">
                         <ul class="more-list">
-                            <li>Message</li>
+                            <li onclick="location.href='messages.html'">Message</li>
                             <li>Change</li>
                             <li class="ownerCancel">Cancel</li>
                         </ul>
@@ -416,7 +416,7 @@
                     <div class="more">
                         <img src="icons/dots.png" alt="more" class="dots">
                         <ul class="more-list">
-                            <li>Message</li>
+                            <li onclick="location.href='messages.html'">Message</li>
                             <li>Change</li>
                             <li class="playerCancel">Cancel</li>
                         </ul>
