--- a/messages.html
+++ b/messages.html
@@ -591,11 +591,19 @@
                         </div>
                     </div>
                 </div>
+                
             </div>
+            <div class="write-message fix-bottom-write-message">
+                <div class="write-message-input">
+                    <textarea name="" id="" placeholder="Write a message"></textarea>
+                    <div class="add">+</div>
+                </div>
+            </div>
+
         </section>
     </div>
     <div class="write-message fix-bottom-write-message">
-        <div class="write-message-input">
+        <div class="write-message-input write-message-input-mobile">
             <textarea name="" id="" placeholder="Write a message"></textarea>
             <div class="add">+</div>
         </div>
@@ -656,7 +664,6 @@
     <!--************************************ DESKTOP FOOTER END************************************-->
     <!--************************************ MOBILE FOOTER START ************************************-->
     <div class="footer-container fix-bottom">
-
         <div class="footer-content">
             <div class="my-games" id="myGamesFooter">
                 <img src="icons/mygames-bottom.png" alt="my games">
