--- a/manage-slots.html
+++ b/manage-slots.html
@@ -588,7 +588,7 @@
 
     <!--************************************ DESKTOP FOOTER END************************************-->
     <!--************************************ MOBILE FOOTER START ************************************-->
-    <div class="footer-container">
+    <div class="footer-container fix-bottom">
         <div class="footer-content">
             <div class="my-games" id="myGamesFooter">
                 <img src="icons/mygames-bottom.png" alt="my games">
