message icons and menu

--- a/messages.html
+++ b/messages.html
@@ -246,6 +246,18 @@
                     <div class="upper-header">
                         <span class="span-black">Messages</span>
                         <div class="options">
+                            <img src="icons/new-message.png" alt="new message">
+                            <span class="more-msg">
+                                <img src="icons/message-settings.png" alt="more" class="message-settings">
+                                <ul class="more-list-msg">
+                                    <li>Confirmed</li>
+                                    <li>Pending</li>
+                                    <li>Rescheduled</li>
+                                    <li>Owners</li>
+                                    <li>Players</li>
+                                </ul>
+                            </span>
+                            
                         </div>
                     </div>
                     <div class="lower-header">
