--- a/selected-profile.html
+++ b/selected-profile.html
@@ -303,7 +303,7 @@
                 <div class="hide-for-mobile">
                     <div class="achievements">
                         <h6>Achievements</h6>
-                        <div><img src="icons/play.png" alt="games played"><p>50+ games played</p></div>
+                        <div><img src="icons/games-played.png" alt="games played"><p>50+ games played</p></div>
                         <div><img src="icons/courts-added.png" alt="games played"><p>5+ courts added</p></div>
                         <div><img src="icons/players-played.png" alt="games played"><p>100+ players played</p></div>
                         <div><img src="icons/spent.png" alt="games played"><p>$200+ spent</p></div>
@@ -311,10 +311,10 @@
                     </div>
                     <div class="verified">
                         <h6>Verified</h6>
-                        <div><i class="fa fa-check" aria-hidden="true"></i><p>Identity</p></div>
-                        <div><i class="fa fa-check" aria-hidden="true"></i>
+                        <div><img src="icons/check.png" alt="check"><p>Identity</p></div>
+                        <div><img src="icons/check.png" alt="check">
                         <p>Email adress</p></div>
-                        <div><i class="fa fa-check" aria-hidden="true"></i>
+                        <div><img src="icons/check.png" alt="check">
                         <p>Phone number</p></div>
                     </div>
                 </div>
