--- a/index.html
+++ b/index.html
@@ -412,6 +412,8 @@
                     <option value="" disabled selected hidden>Sport</option>
                     <option value="football">Football</option>
                     <option value="basketball">Basketball</option>
+                    <option value="tennis">Tennis</option>
+                    <option value="volleyball">Volleyball</option>
                 </select>
                 <input type="text" id="date"placeholder="Date"
                 onfocus="(this.type='date')"
